# ROSMoveitWelding

./: .gitignore
ros2_ws/src/documentation/: ROADMAP.md  Software_Spec.docx  TEST_PLAN.md  TRACEABILITY.md  TZ_Robot_Welding_System_Full_v2.docx  robot_welding_tz_final (5).docx  СваркаТЗТекст.docx  ТЗ 0040 Роботизированная_Система_контроля_сварочного шва_09.07.2026_(+Схемы).docx  ТЗ_0040_финал.docx
ros2_ws/src/welding_backend/: README.md  requirements.txt  run_server.bat  run_server.py
ros2_ws/src/welding_backend/welding_backend/: __init__.py  main.py  step_convert.py
ros2_ws/src/welding_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/welding_bridge/launch/: web_bridge.launch.py
ros2_ws/src/welding_bridge/welding_bridge/: __init__.py  trajectory_bridge_node.py  weld_status_node.py
ros2_ws/src/welding_demo_backend/: README.md  run_server.py
ros2_ws/src/welding_demo_backend/welding_demo_backend/: __init__.py  icp.py  main.py  moveit_export.py
ros2_ws/src/welding_demo_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/welding_demo_bridge/launch/: web_bridge.launch.py
ros2_ws/src/welding_demo_web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ros2_ws/src/welding_demo_web/src/: main.ts
ros2_ws/src/welding_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/welding_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/welding_robot_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/welding_web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+50 files in other folders)
